force-app/main/default/objects/ActeursDossier__c/ActeursDossier__c.object-meta.xml
<CustomObject>
    <label>Acteurs du dossier</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Nom de Acteurs du dossier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acteurs du dossier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>