force-app/main/default/objects/ActeursDossier__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Acteurs du dossier</relationshipLabel>
    <relationshipName>ActeursDossier</relationshipName>
    <type>Lookup</type>
</CustomField>