force-app/main/default/objects/ActeursDossier__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Acteurs du dossier</relationshipLabel>
    <relationshipName>Acteurs_du_dossier</relationshipName>
    <type>Lookup</type>
</CustomField>