force-app/main/default/objects/ActeursDossier__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Acteurs du dossier</relationshipLabel>
    <relationshipName>Acteurs_du_dossier</relationshipName>
    <type>Lookup</type>
</CustomField>