force-app/main/default/objects/ActeursDossier__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <displayFormat>A-{0000000000}</displayFormat>
    <label>Référence</label>
    <type>AutoNumber</type>
</CustomField>