force-app/main/default/objects/ActeursDossier__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Rôle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Centre d&#39;expertise</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Correspondant autre</label>
            </value>
            <value>
                <fullName>CF</fullName>
                <label>Correspondant fraude</label>
            </value>
            <value>
                <fullName>CJ</fullName>
                <label>Correspondant PT5J</label>
            </value>
            <value>
                <fullName>CP</fullName>
                <label>Correspondant PT</label>
            </value>
            <value>
                <fullName>CQ</fullName>
                <label>Correspondant PT n°2</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Correspondant PT n°3</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Correspondant sinistre</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Centre contrôle technique</label>
            </value>
            <value>
                <fullName>CV</fullName>
                <label>Correspondant Vol</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Délégation BCA</label>
            </value>
            <value>
                <fullName>DH</fullName>
                <label>Destinataire honoraires</label>
            </value>
            <value>
                <fullName>DP</fullName>
                <label>Depositaire</label>
            </value>
            <value>
                <fullName>DR</fullName>
                <label>Destinataire du réglement</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>Direction sinistre</label>
            </value>
            <value>
                <fullName>EL</fullName>
                <label>Expert Libéral</label>
            </value>
            <value>
                <fullName>ET</fullName>
                <label>Emetteur du tiers</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Fourrière</label>
            </value>
            <value>
                <fullName>LO</fullName>
                <label>Locataire</label>
            </value>
            <value>
                <fullName>LX</fullName>
                <label>Lieu d&#39;examen</label>
            </value>
            <value>
                <fullName>MO</fullName>
                <label>Meilleur offrant</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <label>Propriétaire 1</label>
            </value>
            <value>
                <fullName>PF</fullName>
                <label>Préfecture</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Propriétaire/loueur</label>
            </value>
            <value>
                <fullName>RC</fullName>
                <label>Récupérateur</label>
            </value>
            <value>
                <fullName>RF</fullName>
                <label>Réparateur facture</label>
            </value>
            <value>
                <fullName>RV</fullName>
                <label>Lieu de rendez-vous</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Sous-traitant</label>
            </value>
            <value>
                <fullName>SB</fullName>
                <label>Siège BCA</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>Société du tiers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>