force-app/main/default/objects/ActeursDossier__c/validationRules/ActeursDossier_champ_a_remplir.validationRule-meta.xml
<ValidationRule>
    <fullName>ActeursDossier_champ_a_remplir</fullName>
    <active>true</active>
    <description>L&#39;un de ces trois champs (Compte, Contact ou Utilisateur ) est renseigné a la fois</description>
    <errorConditionFormula>AND(AND(  !ISBLANK(Compte__c ), OR(!ISBLANK( Contact__c  ),!ISBLANK( Utilisateur__c  ))) || 
AND(  !ISBLANK(Contact__c ), OR(!ISBLANK( Compte__c  ),!ISBLANK( Utilisateur__c  ))) || 
AND(  !ISBLANK(Utilisateur__c ), OR(!ISBLANK( Contact__c  ),!ISBLANK( Compte__c  )))
,
 $User.ByPassValidationRules__c =false)</errorConditionFormula>
    <errorMessage>Maximun un de ces champs (Compte, Contact ou Utilisateur ) doit être remplie a la fois</errorMessage>
</ValidationRule>