force-app/main/default/objects/ActeursDossier__c/validationRules/ActeursDossier_champs_obligatoires.validationRule-meta.xml
<ValidationRule>
    <fullName>ActeursDossier_champs_obligatoires</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ! ISPICKVAL( Role__c , &#39;&#39;) , OR( ISBLANK( Compte__c ) ),OR( ISBLANK( Contact__c ) ),OR( ISBLANK( Utilisateur__c ) )
,
 $User.ByPassValidationRules__c =false)</errorConditionFormula>
    <errorMessage>L&#39;un des champs suivant est obligatoire (Compte, Contact ou Utilisateur)</errorMessage>
</ValidationRule>